--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@3.6.0/dist/chart.min.js"></script>
   <link rel="stylesheet" href="./stylesheets/style.css">
 
+<!-- commit -->
   <!-- Create an element where the map will take place -->
  <div class="euro"><svg id="europeMap" width="800" height="500"></svg></div>
 
